# ezTTS

./: .gitignore  CMakeLists.txt  eztts.cpp  eztts.h  eztts_voice.cpp  eztts_voice.h  main.cpp
linux/: eztts_linux.cpp  eztts_linux.h
windows/: eztts_win.cpp  eztts_win.h
